# SIEM-Anomaly-Detector-ML

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  QUICKSTART.md  QUICKSTART_API.md  QUICK_START.md  README.md  README_FINAL.md  docker-compose.simple.yml  docker-compose.yml  pyproject.toml
backend/: __init__.py  config.py  main.py
backend/api/routes/: alerts.py  analysis.py  health.py  stats.py
backend/db/: __init__.py  cache.py  crud.py  database.py  models.py
backend/ml/: __init__.py  ensemble.py  features.py  model_loader.py
backend/parsers/: __init__.py  auth.py  base.py  firewall.py  nginx.py  syslog.py
docs/: ARCHITECTURE.md  EXECUTIVE_OVERVIEW.html  EXECUTIVE_OVERVIEW.md  LOG_INGESTION.md  ML_ARCHITECTURE.md  README.md  architecture.excalidraw  generate_pdf.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AnomalyList.css  AnomalyList.tsx  Dashboard.css  Dashboard.tsx  MLFlowDiagram.css  MLFlowDiagram.tsx  ModelArchitecture.css  ModelArchitecture.tsx
frontend/src/services/: api.ts
history/: DATA_FLOW.md  DEPLOYMENT.md  INSTALL.md  ML_ENGINEER_GUIDE.md  PRESENTATION_SUMMARY.md  README.md  SESSION_SUMMARY.txt
models/: metrics_20260114_223106.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  siem-metrics.json
scripts/: log_generator.py  retrain_from_production.py  send_test_logs.py  test_api.sh  test_realtime.py  train_ensemble.py  train_ensemble_with_metrics.py  train_initial_model.py  train_simple.py  train_simple_fixed.py
