[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siem-anomaly-detector"
version = "1.0.0"
description = "ML-based SIEM for real-time anomaly detection in security logs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Adrian Infantes Romero", email = "your.email@example.com"}
]
keywords = ["siem", "anomaly-detection", "machine-learning", "cybersecurity", "logs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # ML/Data Science
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",          # PostgreSQL async driver
    "psycopg2-binary>=2.9.9",   # PostgreSQL sync driver
    "alembic>=1.13.0",          # Database migrations
    
    # Cache
    "redis>=5.0.0",
    "hiredis>=2.2.3",           # Redis performance boost
    
    # Logging & Monitoring
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    
    # Utilities
    "python-multipart>=0.0.6",  # Form data
    "python-jose[cryptography]>=3.3.0",  # JWT
    "passlib[bcrypt]>=1.7.4",   # Password hashing
    "python-dotenv>=1.0.0",     # .env files
    "click>=8.1.7",             # CLI tool
    
    # Date/Time
    "python-dateutil>=2.8.2",
    
    # HTTP Client (for webhooks)
    "httpx>=0.25.0",
    
    # Job Queue (optional, for async tasks)
    "celery>=5.3.0",
    "flower>=2.0.0",            # Celery monitoring
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.0",       # Property-based testing
    "faker>=20.0.0",            # Fake data generation
    
    # Code Quality
    "ruff>=0.1.6",              # Linter + formatter (replaces black, isort, flake8)
    "mypy>=1.7.0",              # Type checking
    "types-redis>=4.6.0",       # Type stubs for redis
    "types-passlib>=1.7.7",     # Type stubs for passlib
    
    # Development Tools
    "ipython>=8.17.0",
    "ipdb>=0.13.13",            # Debugger
    "watchfiles>=0.21.0",       # Hot reload
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

benchmarking = [
    "locust>=2.17.0",           # Load testing
    "py-spy>=0.3.14",           # Profiler
    "memory-profiler>=0.61.0",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/SIEM-Anomaly-Detector"
Documentation = "https://siem-docs.example.com"
Repository = "https://github.com/tu-usuario/SIEM-Anomaly-Detector"
Issues = "https://github.com/tu-usuario/SIEM-Anomaly-Detector/issues"

[project.scripts]
siem = "backend.cli:main"

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-data]
backend = ["py.typed"]

# ============================================================================
# RUFF CONFIGURATION (Linter + Formatter)
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Enable all recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # ruff-specific
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "S101",   # Use of assert (OK in tests)
    "PLR0913", # Too many arguments
    "TRY003", # Long exception messages
]

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Use of assert
    "ANN",    # Type annotations
    "D",      # Docstrings
    "PLR2004", # Magic values
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ============================================================================
# MYPY CONFIGURATION (Type Checking)
# ============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "pandas.*",
    "redis.*",
    "celery.*",
]
ignore_missing_imports = true

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show all test outcomes
    "--strict-markers",       # Error on unknown markers
    "--strict-config",        # Error on unknown config
    "--showlocals",           # Show local variables in tracebacks
    "-vv",                    # Verbose output
    "--tb=short",             # Short traceback format
    "--cov=backend",          # Coverage for backend package
    "--cov-report=term-missing", # Show missing lines
    "--cov-report=html",      # Generate HTML report
    "--cov-fail-under=80",    # Fail if coverage < 80%
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require database, redis)",
    "slow: Slow tests (skip with -m 'not slow')",
    "ml: ML model tests",
]
asyncio_mode = "auto"

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================
[tool.coverage.run]
source = ["backend"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/venv/*",
    "**/migrations/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
